--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -77,7 +77,7 @@ jobs:
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Check Python SDK Models Consistency
-        run: scripts/ci_check_models.sh
+        run: bash scripts/ci_check_models.sh
 
       - name: Check for Docs Update
         if: github.event_name == 'pull_request'
