feat: comprehensive improvements for code quality and documentation
BREAKING CHANGE: None

This commit introduces multiple improvements across the UCP codebase:

- fix(generate_schemas): replace .json suffix only when it's actually a suffix
  Fixes issue where str.replace('.json') replaced ALL occurrences including
  directory names like 'json.schemas/'. Added replace_json_suffix() helper.

- feat(validate_specs): add OpenAPI 3.1 compliance and JSON Schema validation
  - Added structured ValidationResult and ValidationIssue classes
  - OpenAPI 3.1 structure validation (version, info, paths, webhooks)
  - JSON Schema structure validation (, , naming conventions)
  - Command-line arguments for --verbose, --continue, --openapi-only

- feat(main): add structured logging and improved error handling
  - Added SchemaLoadError, SchemaReferenceError, OperationNotFoundError
  - Added _format_error() and _safe_load_json() helpers
  - Type hints and comprehensive docstrings for all macros
  - Better error messages with context for debugging

- feat(docs): add interactive architecture diagrams with Mermaid
  - Protocol overview diagram showing UCP components
  - Checkout flow sequence diagram
  - Capability & extension architecture
  - Payment handler data flow
  - Schema composition visualization
  - Checkout lifecycle state machine

- docs(generate_ts_schema_types): add comprehensive JSDoc comments
  - File-level documentation with usage instructions
  - Function-level JSDoc with @param and @returns
  - Refactored for better code organization

- test(schema_utils): add comprehensive unit test suite
  - TestColors: ANSI color constant tests
  - TestResolveRefPath: JSON pointer resolution tests
  - TestLoadJson: File loading tests
  - TestResolveInternalRef: Internal reference tests
  - TestMergeSchemas: Schema merging tests
  - TestResolveSchema: Schema resolution tests
  - TestJsonSuffixReplacement: New suffix replacement tests

Signed-off-by: Contributor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ edit_uri: edit/main/docs/
 nav:
   - Home: index.md
   - Core Concepts: documentation/core-concepts.md
+  - Architecture Diagrams: documentation/architecture-diagrams.md
   - Playground: playground.md
   - Specification:
     - Overview: specification/overview.md
