chore: add schema sync check to pre-commit and optimize CI
Adds pre-commit hook to catch schema sync issues before commit, giving
instant feedback instead of waiting for CI. Also kept the check in CI as
a safety net for cases where pre-commit is bypassed or not set up.

Optimized CI workflow by gating expensive schema generation and validation
steps behind a changed-files check, so they only run when schema files
actually change. Switched to python -m pip for consistency and added
verification to ensure generate_schemas.py produced output before validating.

Error messages updated to be more actionable: changed Warning to Error
since these are hard failures, and improved messaging to tell users exactly
what to do.

Also added spec/** to the changed-files filter so validation runs if
someone edits spec files directly, catching invalid schemas even in that
edge case.

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,7 +24,11 @@ on:
       - "mkdocs.yml"
       - "main.py"
       - "docs/**"
+      - "source/**"
       - "spec/**"
+      - "generate_schemas.py"
+      - "schema_utils.py"
+      - "validate_specs.py"
   pull_request:
     branches:
       - main
@@ -34,7 +38,11 @@ on:
       - "mkdocs.yml"
       - "main.py"
       - "docs/**"
+      - "source/**"
       - "spec/**"
+      - "generate_schemas.py"
+      - "schema_utils.py"
+      - "validate_specs.py"
 
 jobs:
   build_and_deploy:
@@ -74,10 +82,53 @@ jobs:
             ${{ runner.os }}-pip-
 
       - name: Install documentation dependencies
-        run: pip install -r requirements-docs.txt
+        run: python -m pip install -r requirements-docs.txt
 
       - name: Lint YAML files
         run: yamllint -c .github/linters/.yamllint.yml .
+
+      - name: Check if schema files changed
+        id: schema_changed
+        uses: tj-actions/changed-files@v46
+        with:
+          files: |
+            source/**
+            spec/**
+            generate_schemas.py
+            schema_utils.py
+            validate_specs.py
+
+      - name: Generate schemas from source
+        if: steps.schema_changed.outputs.any_changed == 'true'
+        run: python generate_schemas.py
+
+      - name: Verify spec/ directory exists
+        if: steps.schema_changed.outputs.any_changed == 'true'
+        run: |
+          if [ ! -d "spec" ] || [ -z "$(ls -A spec)" ]; then
+            echo "Error: generate_schemas.py succeeded but spec/ is empty or missing"
+            exit 1
+          fi
+
+      - name: Validate generated schemas
+        if: steps.schema_changed.outputs.any_changed == 'true'
+        run: python validate_specs.py
+
+      - name: Check spec sync (safety net)
+        if: steps.schema_changed.outputs.any_changed == 'true'
+        run: |
+          if ! git diff --exit-code spec/; then
+            echo "Error: Generated spec/ files differ from committed files in this PR"
+            echo "Run: python generate_schemas.py and commit the updated spec/ files"
+            git diff --name-only spec/
+            exit 1
+          fi
+          if git ls-files --others --exclude-standard spec/ | grep -q .; then
+            echo "Error: spec/ contains untracked generated files"
+            echo "Run: python generate_schemas.py and commit the updated spec/ files"
+            git ls-files --others --exclude-standard spec/
+            exit 1
+          fi
 
       - name: Install uv
         run: |
