--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,3 +20,11 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+  - repo: local
+    hooks:
+      - id: check-schema-sync
+        name: Check schema sync
+        entry: .pre-commit-hooks/check-schema-sync.sh
+        language: system
+        pass_filenames: false
+        stages: [pre-commit]
