--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,6 +30,8 @@ nav:
   - Playground: playground.md
   - Specification:
     - Overview: specification/overview.md
+    - Cart Capability:
+      - Overview: specification/cart.md
     - Checkout Capability:
       - Overview: specification/checkout.md
       - HTTP/REST Binding: specification/checkout-rest.md
@@ -187,6 +189,8 @@ plugins:
           - documentation/roadmap.md
         Specification Overview:
           - specification/overview.md
+        Cart Capability:
+          - specification/cart.md
         Checkout Capability:
           - specification/checkout.md
           - specification/checkout-rest.md
