--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -40,6 +40,7 @@ jobs:
           DEFAULT_BRANCH: origin/main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MARKDOWN_CONFIG_FILE: ".markdownlint.json"
+          OPENAPI_SPECTRAL_CONFIG_FILE: ".spectral.yaml"
           PYTHON_RUFF_CONFIG_FILE: ../../pyproject.toml
           PYTHON_RUFF_FORMAT_CONFIG_FILE: ../../pyproject.toml
           PYTHON_RUFF_FORMAT_CHECK_ONLY_MODE_OPTIONS: "--check --diff"
