--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "json-schema-to-typescript": "^15.0.4",
     "quicktype": "^23.2.6"
   },
-    "overrides": {
-      "diff": "8.0.3"
+  "overrides": {
+    "diff": "8.0.3"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
+  "devDependencies": {
+    "stylelint": "^17.0.0",
+    "stylelint-config-standard": "^40.0.0"
   }
 }
