--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,6 +78,8 @@ extra:
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
       make our documentation better.
+  version:
+    provider: mike
 
 # Configuration
 theme:
