--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -12,6 +12,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
+mike==2.1.3
 mkdocs-material==9.6.22
 mkdocs-redirects==1.2.2
 mkdocs-macros-plugin==1.4.0
