--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -110,4 +110,12 @@ jobs:
       - name: Deploy development version from main branch
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          mkdocs gh-deploy
+          mike deploy --push draft
+
+      - name: Deploy versioned docs for tagged releases
+        if: startsWith(github.ref, 'refs/tags/')
+        run: |
+          TAG_NAME=${GITHUB_REF#refs/tags/}
+          mike delete latest --push
+          mike deploy --push --update-aliases $TAG_NAME latest
+          mike set-default --push latest
