--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -46,6 +46,8 @@ jobs:
           VALIDATE_PYTHON_MYPY: false
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_CHECKOV: false
+          VALIDATE_GITLEAKS: false
+          VALIDATE_TRIVY: false
           VALIDATE_NATURAL_LANGUAGE: false
           MARKDOWN_CONFIG_FILE: ".markdownlint.json"
           VALIDATE_MARKDOWN_PRETTIER: false
