--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,7 @@ extra_css:
 
 #Global Constants
 extra:
-  ucp_version: "2026-01-11"
+  ucp_version: "draft"
   ucp_url: https://ucp.dev
   analytics:
     provider: google
