[Extension] io.deeprecall.shopping.product_safety - Recall evidence lookup
Adds an optional extension for querying product recall databases.

Scope:
- Pre-checkout evidence lookup
- Synchronous request/response
- Returns similarity matches only

Non-goals:
- Does not block or prevent checkout
- Does not make safety judgments
- Does not enforce compliance

Files:
- spec/schemas/shopping/product_safety.search_req.json
- spec/schemas/shopping/product_safety_resp.json
- docs/specification/product-safety.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ nav:
       - Buyer Consent Extension: specification/buyer-consent.md
       - Discounts Extension: specification/discount.md
       - Fulfillment Extension: specification/fulfillment.md
+      - Product Safety Extension: specification/product-safety.md
     - Cart Capability:
       - Overview: specification/cart.md
       - HTTP/REST Binding: specification/cart-rest.md
@@ -207,6 +208,7 @@ plugins:
           - specification/discount.md
           - specification/embedded-checkout.md
           - specification/fulfillment.md
+          - specification/product-safety.md
         Cart Capability:
           - specification/cart.md
           - specification/cart-rest.md
