fix: resolve documentation rendering errors and linter warnings in `ucp/main.py`
- Update `extension_fields` to dynamically locate extension definitions by inspecting `allOf` properties instead of relying on hardcoded keys like "checkout". This fixes `RuntimeError` when rendering extensions using namespaced keys (e.g., `dev.ucp.shopping.checkout`).
- Update `_render_embedded_table` to handle resolved schema objects in `capability.json` processing. This fixes `ValueError` caused by attempting to construct reference strings from already-resolved schema dictionaries
- Chain exceptions with `from e` or `from None` in `raise` statements across `main.py` to satisfy Ruff rule B904 and improve error traceback clarity.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -180,7 +180,8 @@ hooks:
 # Plugins
 plugins:
   - search
-  - macros
+  - macros:
+      on_error_fail: true
   - site-urls
   - social
   - llmstxt:
