--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,17 +1,7 @@
 # Universal Commerce Protocol (UCP) Codeowners
+
+# Default for all files.
 * @Universal-Commerce-Protocol/maintainers
-
-# Core Protocol
-/source/  @Universal-Commerce-Protocol/tech-council
-
-# Documentation
-/docs/  @Universal-Commerce-Protocol/maintainers
-
-# Governance
-/GOVERNANCE.md  @Universal-Commerce-Protocol/governance-council
-/CONTRIBUTING.md  @Universal-Commerce-Protocol/governance-council
-/CODE_OF_CONDUCT.md @Universal-Commerce-Protocol/governance-council
-/SECURITY.md @Universal-Commerce-Protocol/governance-council
 
 # Infrastructure, Tooling & Configuration
 /.github/                 @Universal-Commerce-Protocol/devops-maintainers
@@ -29,5 +19,17 @@
 /uv.lock                  @Universal-Commerce-Protocol/devops-maintainers
 /package.json             @Universal-Commerce-Protocol/devops-maintainers
 /package-lock.json        @Universal-Commerce-Protocol/devops-maintainers
+
+# Documentation
+/docs/                    @Universal-Commerce-Protocol/maintainers
+
+# Core Protocol
+/source/                  @Universal-Commerce-Protocol/tech-council
+
+# Governance
+/GOVERNANCE.md            @Universal-Commerce-Protocol/governance-council
+/CONTRIBUTING.md          @Universal-Commerce-Protocol/governance-council
+/CODE_OF_CONDUCT.md       @Universal-Commerce-Protocol/governance-council
+/SECURITY.md              @Universal-Commerce-Protocol/governance-council
 
 /.github/CODEOWNERS      @Universal-Commerce-Protocol/governance-council
