--- a/.github/workflows/pr-triage.yml
+++ b/.github/workflows/pr-triage.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Checkout .github repository for org-level configuration
         uses: actions/checkout@v4
         with:
-          repository: nearlyforget/.github-nan
+          repository: ${{ github.repository_owner }}/.github
           path: .github_org
-          ref: pr-triage
+          ref: main
           token: ${{ secrets.CROSS_REPO_READ_PAT }}
 
       - name: Set up Python
@@ -41,9 +41,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install requests google-adk python-dotenv
-
-      - name: Debug - List org files
-        run: ls -R .github_org
 
       - name: Run Triaging Script
         env:
