--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ extra_css:
 
 #Global Constants
 extra:
+  ucp_version: "2026-01-23"
   ucp_url: https://ucp.dev
   analytics:
     provider: google
